@@ -1,3 +1,8 @@
+2014-01-06  Carl Hetherington  <cth@carlh.net>
+
+	* Leave DCP directory creation until the last minute to help
+	avoid half-eaten directories being left around (#174).
+
 2014-01-05  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.57 released.
